Fixed stretched npc head portraits and icons on mobile

--- a/packages/guide/src/app/npcs/components/npc-list/npc-list.component.scss
+++ b/packages/guide/src/app/npcs/components/npc-list/npc-list.component.scss
@@ -1,6 +1,7 @@
 .npc-list-entry {
   .npc-head-portrait {
-    display: block;
+    display: flex;
+    align-items: flex-end;
 
     img {
       object-fit: cover;
